Organized MIR nodes into separate files and added some resolution internals

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -233,6 +233,18 @@
     <ClInclude Include="src\mir\mir.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\mir\nodes\definition.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\mir\nodes\expression.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\mir\nodes\type.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\mir\nodes\pattern.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="vmt22a.natvis" />
