--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -282,7 +282,11 @@
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lir\lir.hpp" />
+    <ClInclude Include="src\mir\nodes\definition.hpp" />
     <ClInclude Include="src\mir\mir.hpp" />
+    <ClInclude Include="src\mir\nodes\expression.hpp" />
+    <ClInclude Include="src\mir\nodes\pattern.hpp" />
+    <ClInclude Include="src\mir\nodes\type.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\parser_internals.hpp" />
     <ClInclude Include="src\resolution\codegen\codegen.hpp" />
