Added simple constraint collection and unification

--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -238,14 +238,19 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">bu/utilities.hpp</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="src\mir\mir_formatting.cpp" />
     <ClCompile Include="src\parser\parse_expression.cpp" />
     <ClCompile Include="src\parser\parse_pattern.cpp" />
     <ClCompile Include="src\parser\parse_type.cpp" />
     <ClCompile Include="src\parser\parser.cpp" />
     <ClCompile Include="src\parser\parser_test.cpp" />
     <ClCompile Include="src\resolution\codegen\codegen.cpp" />
+    <ClCompile Include="src\resolution\collection.cpp" />
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
     <ClCompile Include="src\resolution\resolution.cpp" />
+    <ClCompile Include="src\resolution\resolution_internals.cpp" />
+    <ClCompile Include="src\resolution\resolve_type.cpp" />
+    <ClCompile Include="src\resolution\unification.cpp" />
     <ClCompile Include="src\tests\tests.cpp" />
     <ClCompile Include="src\vm\serializing.cpp" />
     <ClCompile Include="src\vm\virtual_machine.cpp" />
@@ -282,6 +287,7 @@
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lir\lir.hpp" />
+    <ClInclude Include="src\mir\forward.hpp" />
     <ClInclude Include="src\mir\nodes\definition.hpp" />
     <ClInclude Include="src\mir\mir.hpp" />
     <ClInclude Include="src\mir\nodes\expression.hpp" />
