--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="src\resolution\resolve_type.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\resolution\scope.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
