--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -245,7 +245,7 @@
     <ClCompile Include="src\parser\parser.cpp" />
     <ClCompile Include="src\parser\parser_test.cpp" />
     <ClCompile Include="src\resolution\codegen\codegen.cpp" />
-    <ClCompile Include="src\resolution\collection.cpp" />
+    <ClCompile Include="src\resolution\definition_resolution.cpp" />
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
     <ClCompile Include="src\resolution\resolution.cpp" />
     <ClCompile Include="src\resolution\resolution_internals.cpp" />
