--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -111,9 +111,6 @@
     <ClCompile Include="src\resolution\expression_resolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\resolution\collection.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\mir\mir_formatting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -127,6 +124,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\resolution\scope.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\resolution\definition_resolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
