--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="src\resolution\definition_resolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\resolution\namespace_lookup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
