--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -120,7 +120,7 @@
     <ClCompile Include="src\resolution\unification.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\resolution\resolve_type.cpp">
+    <ClCompile Include="src\resolution\type_resolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\resolution\scope.cpp">
