--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -132,6 +132,12 @@
     <ClCompile Include="src\resolution\namespace_lookup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\resolution\type_instantiation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\parser\parser_internals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -264,9 +270,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\mir\nodes\pattern.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\mir\forward.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
